--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
         <title>
             Murillo
         </title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <div>
+        <div id="all-contents">
+            <!-- All content goes here -->
             <nav>
-
+                <h1>
+                    Evan's website
+                </h1>
+                <ul id="nav-ul">
+                </li class ="nav-li"><a href = "index.html">Home</a></li>
+                </li class ="nav-li"><a href = portfolio.html>Portfolio</a></li>
+                </ul>
             </nav>
             <main>
                  <!-- Sidebar section -->
-                 <div>
-
+                 <div class= "sidebar"> 
+                    <img class= "sidebar -img " src="images /profile picture.webp">
                  </div>
 
                  <!-- Content section -->
-                 <div>
+                 <div class = "content">
                     <h2>Evan</h2>
                     <p> 
                         Student at Northshore High
                     </p>
                     <!-- Interests section -->
-                    <div>
+                    <div id="Interests">
                     <h3>Interests</h3>
                     <ul>
                      <li>Football</li>
