finished portfolio and index

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,9 @@
                 </ul>
                 <h2>Kahn Academy Portfolio</h2>
                 <ul id ="portfolio"> 
-                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/6129554043617280" Whats For Dinner >Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
-                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/5284148463190016" Shooting Star >Bouncing Box : A project that gives you a taste of game development on the web </a></li>
-                    <li><a href="" Animal Attack >Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li> 
+                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/6129554043617280" >Whats For Dinner</a></li>
+                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/5284148463190016" >Shooting Star </a></li>
+                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5994824437514240"  >Circularity :  Animal Attack</a></li> 
                 </ul>
             </div>
       </main>
