--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
                     Evan's website
                 </h1>
                 <ul id="nav-ul">
-                </li class ="nav-li"><a href = "index.html">Home</a></li>
-                </li class ="nav-li"><a href = portfolio.html>Portfolio</a></li>
+                <li class ="nav-li"><a href = "index.html">Home</a></li>
+                <li class ="nav-li"><a href = "portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
             <main>
                  <!-- Sidebar section -->
                  <div class= "sidebar"> 
-                    <img class= "sidebar -img " src="images /profile picture.webp">
+                    <img class= "sidebar-img " src="images /profile picture.webp">
                  </div>
 
                  <!-- Content section -->
@@ -32,7 +32,7 @@
                         Student at Northshore High
                     </p>
                     <!-- Interests section -->
-                    <div id="Interests">
+                    <div id="interests">
                     <h3>Interests</h3>
                     <ul>
                      <li>Football</li>
