--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
                     Evan's website
                 </h1>
                 <ul id="nav-ul">
-                </li class ="nav-li"><a href = "index.html">Home</a></li>
-                </li class ="nav-li"><a href = portfolio.html>Portfolio</a></li>
+                    <li class ="nav-li"><a href = "index.html">Home</a></li>
+                    <li class ="nav-li"><a href = portfolio.html>Portfolio</a></li>
                 </ul>
             </nav>
             <main>
