added ad design

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
                     <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/6129554043617280" >Whats For Dinner</a></li>
                     <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/5284148463190016" >Shooting Star </a></li>
                     <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5994824437514240"  > Animal Attack</a></li> 
+                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6424729258213376"  >Ad design</a></li> 
                 </ul>
             </div>
       </main>
