--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -17,7 +17,7 @@
 			position: absolute;
 			top: 100px;
 			/* Change me! */
-			left: 0px;
+			left: 200px;
 		}
 
 		.board {
@@ -75,8 +75,10 @@
 			turn it around! 
 			*/
 			function update() {
-
-
+				moveBoxTO(boardWidth);
+				moveBoxTo(10)
+				moveBoxTo(20)
+				moveBoxTo(30)
 			};
 
 			/* 
