--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -17,7 +17,7 @@
 			position: absolute;
 			top: 100px;
 			/* Change me! */
-			left: 200px;
+			left: 0px;
 		}
 
 		.board {
@@ -66,8 +66,9 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
-
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -75,10 +76,17 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTO(boardWidth);
-				moveBoxTo(10)
-				moveBoxTo(20)
-				moveBoxTo(30)
+				// increase positionX by 10 
+				positionX = positionX + 10;
+				moveBoxTo(positionX);
+				positionX = positionX + speed;
+				if(positionX > boardWidth){
+					speed = -33;
+				}
+
+				if (positionX < 0 ){
+					speed = 23;
+				}
 			};
 
 			/* 
@@ -87,6 +95,12 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				//increase points 
+				positionX = 0;
+				points++;
+				changeBoxText(points);
+				// increase Speed 
+				speed += 3 ;
 
 
 			};
