--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,7 @@
                     <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/6424729258213376"  >Ad design</a></li>
                     <li><a href="https://www.khanacademy.org/computer-programming/halloween-project/6029077512634368"  >Halloween Project</a></li> 
                     <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-fish-tank/6060238340800512"  >Fish Tank</a></li> 
+                    <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-build-a-house/5665246062690304"  >Build a house</a></li>
                 </ul>
             </div>
       </main>
